hphp/hack/test/typecheck/functional_dots.php.exp
File "functional_dots.php", line 18, characters 5-85:
Invalid argument (Typing[4041])
File "functional_dots.php", line 18, characters 5-85:
Too many mandatory arguments
File "functional_dots.php", line 12, characters 12-44:
Because of this definition
